# upscaler-demo

./: CMakeLists.txt  README.md
dependencies/include/glad/: glad.h
src/: Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  TextureLoader.cpp  TextureLoader.h  config.h  glad.c  imgui.ini  main.cpp  stb_image_impl.cpp  triangle_mesh.cpp  triangle_mesh.h
src/shaders/: 3d_fragment.txt  3d_vertex.txt  fragment.txt  fragment_easu.txt  fragment_rcas.txt  fragment_sharpen.txt  fragment_upscale.txt  vertex.txt
